$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2012

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
	Backward compatibility issues:
	Known issues:
	Bug fixes:
		- fix build when sched_setaffinity() is unavailable

MBDyn 1.5.0
	Enhancements:
		- added displacement-only nodes and selected basic elements
		- added membrane element (Marco Morandini & Tommaso Solcia)
		- added continuous contact constitutive law (Matteo Fancello)
		- added inverse dynamics body for weight tailoring
		- added "other" specifier to total pin joint input
		- added dof stats output to file (Reinhard Resch)
		- added '-E' to enable fpe checking
		- added module-octave and related modules (Reinhard Resch)
		- drive drive made differentiable (Reinhard Resch)
		- added "m" (mass) to body private data (Louis Gagnon)
		- added module-eu2phi TplDriveCaller wrapper
		  (suggested by Tingnan Zhang)
		- added built-in 'TRUE' and 'FALSE' boolean const vars
		- added built-in int/real limit const vars
		- added module-wheel4 (Louis Gagnon)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix output file name ext. issue (noted by Jens van Schelve)
		- fix totalj rel. rot. priv data (noted by Jens van Schelve)
		- fix beam default output (noted by Reinhard Resch)
		- fix linear/angular acceleration joint initialization
		- fix initial assembly required by userelem (Reinhard Resch)
		- fix "wrong type" diagnostic message in math parser
		- fix initial assembly matrix reset (noted by Reinhard Resch)
		- fix uninitialized array in modal joint parsing
		  (noted by Domenico Capobianco)
		- fix 'print: all'