@@ -1,0 +1,6 @@
+#ifndef NODEDISTDRV_H_
+#define NODEDISTDRV_H_
+
+bool nodedistdrive_set();
+
+#endif /* NODEDISTDRV_H_ */
