@@ -12,6 +12,8 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
+		- added "ifndef" declaration modifier for var redefinition
+		- added module-nodedistdrive (Reinhold Resch)
 	Backward compatibility issues:
 	Known issues:
 	Bug fixes:
